# ogma-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Config.h  Server.cpp  Server.h  WebSocket.cpp  WebSocket.h  main.cpp
